0.19.3	UNRELEASED

0.19.2	2018-04-07

 BUG FIXES

  * Fix deprecated Index.iterblobs method.
    (Jelmer Vernooĳ)

0.19.1	2018-04-05

 IMPROVEMENTS

  * Add 'dulwich.mailmap' file for reading mailmap files.
    (Jelmer Vernooĳ)

  * Dulwich no longer depends on urllib3[secure]. Instead,
    "dulwich[https]" can be used to pull in the necessary
    dependencies for HTTPS support. (Jelmer Vernooĳ, #616)

  * Support the `http.sslVerify` and `http.sslCAInfo`
    configuration options. (Jelmer Vernooĳ)

  * Factor out `dulwich.client.parse_rsync_url` function.
    (Jelmer Vernooĳ)

  * Fix repeat HTTP requests using the same smart HTTP client.
    (Jelmer Vernooĳ)

  * New 'client.PLinkSSHVendor' for creating connections using PuTTY's plink.exe.
    (Adam Bradley, Filipp Frizzy)

  * Only pass in `key_filename` and `password` to SSHVendor
    implementations if those parameters are set.
    (This helps with older SSHVendor implementations)
    (Jelmer Vernooĳ)

 API CHANGES

  * Index.iterblobs has been renamed to Index.iterobjects.
   (Jelmer Vernooĳ)

0.19.0	2018-03-10

 BUG FIXES

  * Make `dulwich.archive` set the gzip header file modification time so that
    archives created from the same Git tree are always identical.
    (#577, Jonas Haag)

  * Allow comment characters (#, ;) within configuration file strings
    (Daniel Andersson, #579)

  * Raise exception when passing in invalid author/committer values
    to Repo.do_commit(). (Jelmer Vernooĳ, #602)

 IMPROVEMENTS

  * Add a fastimport ``extra``. (Jelmer Vernooĳ)

  * Start writing reflog entries. (Jelmer Vernooĳ)

  * Add ability to use password and keyfile ssh options with SSHVendor. (Filipp Kucheryavy)

  * Add ``change_type_same`` flag to ``tree_changes``.
    (Jelmer Vernooĳ)

 API CHANGES

  * ``GitClient.send_pack`` now accepts a ``generate_pack_data``
    rather than a ``generate_pack_contents`` function for
    performance reasons. (Jelmer Vernooĳ)
