@@ -1,5 +1,10 @@
 0.19.3	UNRELEASED
 
+ IMPROVEMENTS
+
+  * Add really basic `dulwich.porcelain.fsck` implementation.
+    (Jelmer Vernooĳ)
+
 0.19.2	2018-04-07
 
  BUG FIXES
